--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "gulp": "^4.0.1",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.2.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "node-sass": "^4.12.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-scss": "^1.4.0"
+  }
 }
